import { Controller } from '@nestjs/common';
import { GrpcMethod } from '@nestjs/microservices';
import { BaseController } from './base.controller';

/**
 * User gRPC Controller
 * Handles user-related operations like registration, authentication, and profile management
 */
@Controller()
export class UserController extends BaseController {
  // TODO: Inject UserService when available
  // constructor(private readonly userService: UserService) {
  //   super();
  // }

  /**
   * Create a new user account
   * @param data - User creation data (username, email, password)
   * @returns Created user information
   */
  @GrpcMethod('UserService', 'CreateUser')
  async createUser(data: any): Promise<any> {
    try {
      this.validateRequired(data, ['username', 'email', 'password']);
      
      // TODO: Implement actual user creation logic
      // const user = await this.userService.createUser(data);
      
      // Placeholder response
      return {
        id: 'user_' + Date.now(),
        username: data.username,
        email: data.email,
        createdAt: new Date().toISOString(),
      };
    } catch (error) {
      this.handleError(error, 'CreateUser');
    }
  }

  /**
   * Authenticate user with credentials
   * @param data - Authentication credentials (email/username and password)
   * @returns Authentication token and user info
   */
  @GrpcMethod('UserService', 'AuthenticateUser')
  async authenticateUser(data: any): Promise<any> {
    try {
      this.validateRequired(data, ['email', 'password']);
      
      // TODO: Implement actual authentication logic
      // const authResult = await this.userService.authenticate(data);
      
      // Placeholder response
      return {
        token: 'jwt_token_placeholder',
        user: {
          id: 'user_123',
          username: 'testuser',
          email: data.email,
        },
      };
    } catch (error) {
      this.handleError(error, 'AuthenticateUser');
    }
  }

  /**
   * Get user profile by ID
   * @param data - User ID
   * @returns User profile information
   */
  @GrpcMethod('UserService', 'GetUser')
  async getUser(data: any): Promise<any> {
    try {
      this.validateRequired(data, ['id']);
      
      // TODO: Implement actual user retrieval logic
      // const user = await this.userService.findById(data.id);
      
      // Placeholder response
      return {
        id: data.id,
        username: 'testuser',
        email: 'test@example.com',
        createdAt: '2024-01-01T00:00:00Z',
      };
    } catch (error) {
      this.handleError(error, 'GetUser');
    }
  }

  /**
   * Update user profile
   * @param data - User ID and update data
   * @returns Updated user information
   */
  @GrpcMethod('UserService', 'UpdateUser')
  async updateUser(data: any): Promise<any> {
    try {
      this.validateRequired(data, ['id']);
      
      // TODO: Implement actual user update logic
      // const user = await this.userService.update(data.id, data);
      
      // Placeholder response
      return {
        id: data.id,
        username: data.username || 'testuser',
        email: data.email || 'test@example.com',
        updatedAt: new Date().toISOString(),
      };
    } catch (error) {
      this.handleError(error, 'UpdateUser');
    }
  }

  /**
   * Delete user account
   * @param data - User ID
   * @returns Deletion confirmation
   */
  @GrpcMethod('UserService', 'DeleteUser')
  async deleteUser(data: any): Promise<any> {
    try {
      this.validateRequired(data, ['id']);
      
      // TODO: Implement actual user deletion logic
      // await this.userService.delete(data.id);
      
      // Placeholder response
      return {
        success: true,
        message: `User ${data.id} deleted successfully`,
      };
    } catch (error) {
      this.handleError(error, 'DeleteUser');
    }
  }
}